--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,14 @@
 [package]
-name = "rusqlite-partitioner"
+name = "sqlite3-partitioner"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
-name = "rusqlit_partitioner"
+name = "partitioner"
 path = "src/lib.rs"
 crate-type=["cdylib"]
+exactname = {cdylib = "{}.dylib"}
 [dependencies]
 regex = "1.10.3"
 simple-logging = "2.0.2"
