--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,4 +20,7 @@ serde_derive = "1.0"
 sqlite3_ext = {version = "0.1.3", features = ["with_rusqlite"]} 
 rusqlite = {version = "^0.27", features = ["column_decltype", "vtab"]}
 
-
+[profile.release]
+opt-level = 'z'
+lto = true
+codegen-units = 1
