--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,10 +12,11 @@ exactname = {cdylib = "{}.dylib"}
 [dependencies]
 regex = "1.10.3"
 sqlite3_ext = {version = "0.1.3"} 
-chrono = { version = "0.4", features = ["unstable-locales"] }
+chrono = { version = "0.4", features = ["unstable-locales", "serde"] }
 serde = { version = "1.0", features = ["derive"] }
 ron = "0.8"
 serde_derive = "1.0"
+sqlparser = {version = "0.44.0", features = ["serde"]}
 [dev-dependencies]
 sqlite3_ext = {version = "0.1.3", features = ["with_rusqlite"]} 
 rusqlite = {version = "^0.27", features = ["column_decltype", "vtab"]}
