--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,8 +20,12 @@ sqlparser = {version = "0.44.0", features = ["serde"]}
 [dev-dependencies]
 sqlite3_ext = {version = "0.1.3", features = ["with_rusqlite"]} 
 rusqlite = {version = "^0.27", features = ["column_decltype", "vtab"]}
+cargo-llvm-cov = "0.6.7"
 
 [profile.release]
 opt-level = 'z'
 lto = true
 codegen-units = 1
+
+[build]
+profiler = true
