--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,10 +19,15 @@ sqlite3_ext = {version = "0.1.3", features = ["with_rusqlite"]}
 rusqlite = {version = "^0.27", features = ["column_decltype", "vtab"]}
 cargo-llvm-cov = "0.6.7"
 
-[profile.release]
-opt-level = 'z'
-lto = true
-codegen-units = 1
 
-[build]
-profiler = true
+[profile.release]
+opt-level = 3
+debug = false
+strip = "none"
+debug-assertions = false
+overflow-checks = true
+lto = true
+panic = 'unwind'
+incremental = false
+codegen-units = 1
+rpath = false
