--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,13 +21,14 @@ cargo-llvm-cov = "0.6.7"
 
 
 [profile.release]
-opt-level = 3
+opt-level = "z"
 debug = false
-strip = "none"
+strip = true
 debug-assertions = false
-overflow-checks = true
+overflow-checks = false
 lto = true
-panic = 'unwind'
 incremental = false
 codegen-units = 1
 rpath = false
+panic = "abort"
+
